Fix Bug 431126 - KNotes cannot be configured using the GUI

BUG: 431126